chore: preserve pre-menu-reorganization backend state